--- a/style/cart.css
+++ b/style/cart.css
@@ -10,6 +10,7 @@
 
 .card__horizontal {
     background-color: var(--white);
+    height: 30rem;
 }
 
 .card__buttons {
@@ -17,8 +18,24 @@
     width: 100%;
 }
 
-.full {
-    width: 100%;
+.card__footer {
+    border: none;
+}
+
+.card__quantity {
+    padding: 1rem;
+    display: flex;
+    gap: 3rem;
+    justify-content: center;
+}
+
+.card__horizontal>.card__footer {
+    gap: 1rem;
+    justify-content: space-around;
+}
+
+.card__horizontal>.card__footer>.card__buttons {
+    margin: 0;
 }
 
 .main__container>.card__horizontal>.card__footer>.card__buttons>.btn {
@@ -31,16 +48,35 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    border: 1px solid var(--gray);
+    border: 2px solid var(--gray);
+    border-radius: 1rem;
+    background-color: var(--white);
     padding: 2rem;
     margin: 1rem;
-}
-
-.card__footer {
-    border: none;
 }
 
 .cart>.btn {
     width: 100%;
     margin: 0;
+}
+
+.cart__details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .main__container {
+        padding: 0;
+        margin: 0
+    }
+    .card__horizontal {
+        width: 40rem;
+        height: 28rem;
+    }
+    .card__horizontal>.card__image>img {
+        width: 20rem;
+        height: 100%;
+    }
 }
