--- a/style/authentication.css
+++ b/style/authentication.css
@@ -66,7 +66,7 @@ input {
     margin: 3rem auto;
 }
 
-@media only screen and (max-width: 64em) {
+@media only screen and (max-width: 640px) {
      :root {
         font-size: 55%;
     }
