--- a/style/cart.css
+++ b/style/cart.css
@@ -66,7 +66,7 @@
     align-items: center;
 }
 
-@media only screen and (max-width: 76em) {
+@media only screen and (max-width: 768px) {
     .main__container {
         padding: 0;
         margin: 0
