--- a/style/wishlist.css
+++ b/style/wishlist.css
@@ -25,7 +25,7 @@
     justify-content: center;
 }
 
-@media only screen and (max-width: 64em) {
+@media only screen and (max-width: 640px) {
      :root {
         font-size: 55%;
     }
