--- a/style/home.css
+++ b/style/home.css
@@ -46,16 +46,28 @@
     justify-content: center;
 }
 
-.icon {
+.badge__icons .icon {
     font-size: 2.5rem;
 }
 
-.btn {
+.navbar__list__items .btn {
     width: 8rem;
+    font-size: 1.8rem;
+}
+
+.navbar__list {
+    width: 100%;
+    justify-content: flex-end;
+}
+
+.navbar__list__items:first-child {
+    margin: 0 auto;
 }
 
 .navbar__header {
     font-size: 2.5rem;
+    width: max-content;
+    margin: 0;
 }
 
 .navbar__list {
@@ -67,21 +79,45 @@
 }
 
 .search {
-    max-width: 25rem;
-    height: 3rem;
+    max-width: 30rem;
+    height: 4rem;
     border-radius: 5px;
     padding: 0.5rem 1rem;
     border: 1px solid var(--gray);
 }
 
-@media only screen and (max-width: 76em) {
-     :root {
-        font-size: 55%;
+@media only screen and (max-width: 480px) {
+    .navbar__header {
+        font-size: 1.4rem;
     }
+    .navbar__list__items .btn {
+        font-size: 1.2rem;
+        width: 5rem;
+        padding: 1rem 0.5rem;
+    }
+    .icon {
+        font-size: 1.6rem;
+    }
+    .navbar__list {
+        gap: 0;
+        margin: 0;
+        padding: 0;
+    }
+    .badge__number {
+        font-size: 1rem;
+    }
+    .search {
+        max-width: 8rem;
+        height: 3rem;
+        padding: 0;
+    }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 768px) {
     .navbar__header {
         font-size: 1.6rem;
     }
-    .btn {
+    .navbar__list__items .btn {
         font-size: 1.2rem;
         width: 5rem;
         padding: 1rem 0.5rem;
@@ -91,6 +127,8 @@
     }
     .navbar__list {
         gap: 0;
+        margin: 0;
+        padding: 0;
     }
     .badge__number {
         font-size: 1rem;
